WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97082
[EFL][WK2] fast/forms/select-writing-direction-natural.html is failing
https://bugs.webkit.org/show_bug.cgi?id=97082
Summary
[EFL][WK2] fast/forms/select-writing-direction-natural.html is failing
Chris Dumez
Reported
2012-09-19 01:09:12 PDT
fast/forms/select-writing-direction-natural.html is failing on EFL WK2, text directionality is incorrect.
Attachments
Patch
(70.20 KB, patch)
2012-09-19 01:15 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-19 01:15:55 PDT
Created
attachment 164687
[details]
Patch
WebKit Review Bot
Comment 2
2012-09-19 10:51:50 PDT
Comment on
attachment 164687
[details]
Patch Clearing flags on attachment: 164687 Committed
r129019
: <
http://trac.webkit.org/changeset/129019
>
WebKit Review Bot
Comment 3
2012-09-19 10:51:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug