[EFL][WK2] fast/forms/select-writing-direction-natural.html is failing https://bugs.webkit.org/show_bug.cgi?id=97082

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-19
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

WebChromeClient::selectItemWritingDirectionIsNatural() now returns
true for EFL-WK2, consistently with EFL-WK1, so that the style
is properly adjusted in RenderMenuList::adjustInnerStyle().

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::selectItemWritingDirectionIsNatural):

LayoutTests:

Rebaseline fast/forms/select-writing-direction-natural.html and
unskip it for efl-wk2.

* platform/efl-wk2/TestExpectations:
* platform/efl/fast/forms/select-writing-direction-natural-expected.png:

Canonical link: https://commits.webkit.org/115073@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129019 268f45cc-cd09-0410-ab3c-d52691b4dbfc